# api-python-basic

./: README.md  pyproject.toml
app/: Dockerfile  main.py
